--- a/spring-ioc/pom.xml
+++ b/spring-ioc/pom.xml
@@ -2,25 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>spring</artifactId>
+        <groupId>ir.lazydeveloper</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ir.lazydeveloper</groupId>
-    <artifactId>spring</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>spring-ioc</module>
-    </modules>
-    <packaging>pom</packaging>
+    <artifactId>spring-ioc</artifactId>
+
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>1.2.6</version>
-        </dependency>
-    </dependencies>
 </project>
