--- a/spring-ioc/01-springIoc/pom.xml
+++ b/spring-ioc/01-springIoc/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
+        <artifactId>spring-ioc</artifactId>
         <groupId>ir.lazydeveloper</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-ioc</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>01-springIoc</module>
-    </modules>
+    <artifactId>01-springIoc</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
